# sming_workshop

./: .gitignore  readme.md
ArduinoStyle/: info.txt
CLionTemplate/: CMakeLists.txt  readme.md
CLionTemplate/app/: application.cpp
SmingTemplate/app/: application.cpp
SmingTemplate/app/include/: user_config.h
examples/: readme.md
examples/ArduinoStyle/: info.md
examples/ArduinoStyle/app/: application.cpp
examples/ArduinoStyle/include/: user_config.h
examples/CLionTemplate/: CMakeLists.txt
examples/Debug/: Makefile-user.mk  gdbcmds  readme.md
examples/Debug/app/: application.cpp
examples/Debug/include/: user_config.h
examples/MqttBasic/: Makefile-user.mk
examples/MqttBasic/app/: application.cpp
examples/MqttDht11/: Makefile  readme.md
examples/MqttDht11/app/: application.cpp
examples/MqttDht11/include/: user_config.h
examples/SmingStyle/app/: application.cpp
examples/mqtt_debounced_button/: Makefile-user.mk  spiffsconfig.py
examples/mqtt_debounced_button/app/: application.cpp  application.h  button.cpp  button.h  mqtt.cpp  mqtt.h  spiffsconfig.cpp  telnet.cpp
examples/mqtt_debounced_button/include/: pinconfig.h  spiffsconfig.h
